RestaurantReservation/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restaurantreservation-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: restaurantreservation
    spec:
      containers:
        - name: restaurantreservation-container
          image: yichingllin/restaurantreservation-docker
          ports:
            - containerPort: 8081
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
  selector:
    matchLabels:
      app: restaurantreservation
