RestaurantReservation/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
   name: restaurantreservation-service
spec:
   selector:
     app: restaurantreservation
   type: NodePort
   ports:
     - name: restaurantreservation
       protocol: TCP
       port: 80
       targetPort: 8081
