RestaurantReservation/kubernetes/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: restaurantreservation-ingress
spec:
    rules:
        - host: restaurantreservation.example
          http:
            paths:
              - pathType: ImplementationSpecific
                backend:
                  service:
                    name: restaurantreservation-service
                    port: 
                      number: 80
                path: /
